tests/fixtures/errors/generic_dissect_noelse.z
# E0500: a generic type dissection with no case for the concrete type and no
# else is a compile-time error at the instantiation that has no matching arm.
Box: class {
    val: t
    only: function {:this} out StringView is {
        match t case i32 then {
            return "i32"
        }
    }
} as { t: Any.generic }

main: function is {
    b: Box val: "s".string
    print "\{b.only}"
}
